@@ -1,4 +1,5 @@
-{'IP_TOTLEN_HOST_ORDER': 0,
+{'#interface': 'bge0',
+ 'IP_TOTLEN_HOST_ORDER': 0,
  'Noise': None,
  'bind_address': '',
  'broadcast': 1,
@@ -47,7 +48,7 @@
                   '64.56.182.6',
                   '64.56.182.51',
                   '64.56.182.52'),
- 'interface': 'bge0',
+ 'interface': 'fxp0',
  'irc_chans': {'#sumi': 'anon'},
  'irc_nick': 'sumi-00',
  'irc_port': 6667,
